--- a/Tutorials/GooglePubSubGetCMEBinaryData.ipynb
+++ b/Tutorials/GooglePubSubGetCMEBinaryData.ipynb
@@ -317,7 +317,7 @@
    "metadata": {},
    "source": [
     "\n",
-    "![alt text](subscriptionView.png)"
+    "![alt text](https://github.com/CMEGroup/CMESmartStream-on-GCP-Tutorial/blob/master/Tutorials/images/subscriptionView.png)"
    ]
   },
   {
@@ -435,7 +435,7 @@
     "\n",
     "#  Questions?\n",
     "\n",
-    "If you have questions or think we can update this to additional use cases, please use the Issues feature in Github or reach out to CME Sales team at markettechsales@cmegroup.cmegroup\n",
+    "If you have questions or think we can update this to additional use cases, please use the Issues feature in Github or reach out to CME Sales team at markettechsales@cmegroup.com\n",
     "\n",
     "\n"
    ]
