updated per feedback of corp comm team.

--- a/Tutorials/GooglePubSubGetCMEBinaryData.ipynb
+++ b/Tutorials/GooglePubSubGetCMEBinaryData.ipynb
@@ -23,6 +23,10 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "#import packages.  These are outlined in the environment.ymal file as part of this project.\n",
     "#these can also be directly imported. \n",
@@ -33,13 +37,8 @@
     "from google.cloud import pubsub_v1\n",
     "import os\n",
     "import google.auth\n",
-    "\n",
-    ""
-   ],
-   "cell_type": "code",
-   "outputs": [],
-   "metadata": {},
-   "execution_count": 1
+    "\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -94,13 +93,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
-     "text": "/anaconda3/envs/python3/lib/python3.7/site-packages/google/auth/_default.py:66: UserWarning: Your application has authenticated using end user credentials from Google Cloud SDK. We recommend that most server applications use service accounts instead. If your application continues to use end user credentials from Cloud SDK, you might receive a \"quota exceeded\" or \"API not enabled\" error. For more information about service accounts, see https://cloud.google.com/docs/authentication/\n  warnings.warn(_CLOUD_SDK_CREDENTIALS_WARNING)\n"
+     "text": [
+      "/anaconda3/envs/python3/lib/python3.7/site-packages/google/auth/_default.py:66: UserWarning: Your application has authenticated using end user credentials from Google Cloud SDK. We recommend that most server applications use service accounts instead. If your application continues to use end user credentials from Cloud SDK, you might receive a \"quota exceeded\" or \"API not enabled\" error. For more information about service accounts, see https://cloud.google.com/docs/authentication/\n",
+      "  warnings.warn(_CLOUD_SDK_CREDENTIALS_WARNING)\n"
+     ]
     }
    ],
    "source": [
@@ -137,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -228,7 +230,7 @@
       "Target Topic: \t\t CERT.SSCL.GCP.MD.RT.CMEG.FIXBIN.v01000.INCR.310 \n",
       "\n",
       "My Project: \t\t prefab-rampart-794\n",
-      "My Subscriptions: \t MY_CERT.SSCL.GCP.MD.RT.CMEG.FIXBIN.v01000.INCR.310\n"
+      "My Subscriptions: \t ALEXDEMO_CERT.SSCL.GCP.MD.RT.CMEG.FIXBIN.v01000.INCR.310\n"
      ]
     }
    ],
@@ -254,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -264,7 +266,7 @@
       "Created Subscriptions in Project \n",
       "\n",
       "Listing Subscriptions in Your Project prefab-rampart-794 : \n",
-      "\t projects/prefab-rampart-794/subscriptions/MY_CERT.SSCL.GCP.MD.RT.CMEG.FIXBIN.v01000.INCR.310\n"
+      "\t projects/prefab-rampart-794/subscriptions/ALEXDEMO_CERT.SSCL.GCP.MD.RT.CMEG.FIXBIN.v01000.INCR.310\n"
      ]
     }
    ],
@@ -323,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -332,25 +334,25 @@
      "text": [
       "Pulling a Single Message and Displaying:\n",
       "received_messages {\n",
-      "  ack_id: \"PjA-RVNEUAYWLF1GSFE3GQhoUQ5PXiM_NSAoRREBCBQFfH11Qk91WVUaB1ENGXJ8ZyNqD0FVVBYBf1VfGQRuXVZ1FWANO011aH1sXRUEBUVSeFtdEglA2tPC2oOkTWhBWaeitcw0IqrGpZdqZiY9XxJLLD5-PT1FQV5AEkw2CERJUytDCypYEU4EISE\"\n",
+      "  ack_id: \"TgQhIT4wPkVTRFAGFixdRkhRNxkIaFEOT14jPzUgKEURAQgUBXx9cUFPdVVeGgdRDRlyfGcjbAkXUgRGVnlVWRENem1cVzhYDxl7e2F2bl4VAwpHUn13wszCqPLBIR1tNY2h8KFASony3-N2Zho9XxJLLD5-PT1FQV5AEkw2CERJUytDCypYEQ\"\n",
       "  message {\n",
-      "    data: \"#\\232\\005\\000\\252<\\014\\030\\272\\367\\340\\025X\\000\\013\\000.\\000\\001\\000\\t\\000\\225-\\375\\027\\272\\367\\340\\025\\204\\000\\000 \\000\\001\\0006\\264\\0302\\037\\001\\000\\016\\000\\000\\000K)\\000\\000\\246\\374\\000\\000\\003\\000\\000\\000\\002\\0010\\000\\000\\000\\000\\000\\030\\000\\000\\000\\000\\000\\000\\001\\242\\206\\212\\022\\017\\000\\000\\000\\317\\221\\215$\\000\\000\\000\\000\\002\\000\\000\\000\\001\\000\\000\\000\"\n",
+      "    data: \":|\\027\\000\\353\\336\\260\\266\\260n\\346\\025@\\000\\013\\000/\\000\\001\\000\\t\\000\\257\\266\\220\\266\\260n\\346\\025\\204\\000\\000(\\000\\001\\331\\376\\304\\022\\017\\000\\000\\000\\211E\\303$\\000\\000\\000\\000\\000j\\317\\245>\\'\\001\\000\\003\\000\\000\\000K)\\000\\000\\0001\\000\\000\\000\\000\\000\\000\"\n",
       "    attributes {\n",
       "      key: \"Channel\"\n",
       "      value: \"310\"\n",
       "    }\n",
       "    attributes {\n",
       "      key: \"MsgSeqNum\"\n",
-      "      value: \"367139\"\n",
+      "      value: \"1539130\"\n",
       "    }\n",
       "    attributes {\n",
       "      key: \"SendingTime\"\n",
-      "      value: \"1576532248227\"\n",
+      "      value: \"1578070424712\"\n",
       "    }\n",
-      "    message_id: \"898676570164694\"\n",
+      "    message_id: \"920960344628213\"\n",
       "    publish_time {\n",
-      "      seconds: 1576532248\n",
-      "      nanos: 247000000\n",
+      "      seconds: 1578070424\n",
+      "      nanos: 736000000\n",
       "    }\n",
       "  }\n",
       "}\n",
@@ -379,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -387,8 +389,14 @@
      "output_type": "stream",
      "text": [
       "/anaconda3/envs/python3/lib/python3.7/site-packages/google/auth/_default.py:66: UserWarning: Your application has authenticated using end user credentials from Google Cloud SDK. We recommend that most server applications use service accounts instead. If your application continues to use end user credentials from Cloud SDK, you might receive a \"quota exceeded\" or \"API not enabled\" error. For more information about service accounts, see https://cloud.google.com/docs/authentication/\n",
-      "  warnings.warn(_CLOUD_SDK_CREDENTIALS_WARNING)\n",
-      "\tDeleted: projects/prefab-rampart-794/subscriptions/MY_CERT.SSCL.GCP.MD.RT.CMEG.FIXBIN.v01000.INCR.310\n"
+      "  warnings.warn(_CLOUD_SDK_CREDENTIALS_WARNING)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\tDeleted: projects/prefab-rampart-794/subscriptions/ALEXDEMO_CERT.SSCL.GCP.MD.RT.CMEG.FIXBIN.v01000.INCR.310\n"
      ]
     }
    ],
